Bug 392722 - nsinstall chokes on double slashes in path patch by benjamin@smedbergs.us  r=nelson